--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    align-items: flex-start;
+    height: 100vh;
 }
 
 .dark-header {
@@ -14,7 +14,7 @@ body {
     margin: 0;
     padding: 0.75em 3em;
     width: 100%;
-    flex: auto;
+    flex: none;
     box-sizing: border-box;
 }
 
@@ -84,9 +84,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    height: 100%;
     width: 100%;
-    flex: 1 1 auto;
+    flex: auto;
+    gap: 1em;
 }
 
 .information-header {
@@ -119,3 +120,33 @@ main {
     text-align: center;
 }
 
+.quote-card {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.quote-card .quote {
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    color: #1f2937;
+}
+
+.quote-card .byline {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: right;
+    color: #1f2937;
+}
+
+footer {
+    flex: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    width: 100%;
+    color: #e5e7eb;
+    height: 84px;
+}
